# research-mind-service

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
app/: exceptions.py  main.py
app/core/: config.py  workspace_indexer.py
app/db/: base.py  session.py
app/middleware/: session_validation.py
app/models/: __init__.py  audit_log.py  chat_message.py  content_item.py  session.py
app/routes/: api.py  audit.py  chat.py  content.py  health.py  indexing.py  links.py  sessions.py
app/sandbox/: README.md  path_validator.py
app/schemas/: __init__.py  audit.py  chat.py  common.py  content.py  indexing.py  links.py  session.py
app/services/: audit_service.py  chat_service.py  content_service.py  indexing_service.py  link_extractor.py  session_service.py
app/services/export/: __init__.py  base.py  markdown.py  pdf.py
app/services/extractors/: __init__.py  base.py  exceptions.py  html_extractor.py  js_extractor.py  pipeline.py
app/services/retrievers/: __init__.py  base.py  document.py  factory.py  file_upload.py  git_repo.py  mcp_source.py  text_retriever.py  url_retriever.py
docs/: CLAUDE.md  DEPLOYMENT.md  TROUBLESHOOTING.md  api-contract.md
kuzu-memories/: .gitignore  README.md  memories.db  project_info.md
migrations/: env.py
migrations/versions/: 4bd8cd1f8ec7_add_content_items_table.py  56afc8db4b50_create_audit_logs_table.py  5d88e65ab411_create_sessions_table.py  chat001_add_chat_messages_table.py
research_mind_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_audit.py  test_chat_clear.py  test_chat_export.py  test_chat_streaming.py  test_content.py  test_content_batch.py  test_document_content.py  test_error_handling.py  test_health.py  test_indexing.py  test_integration_e2e.py  test_links.py  test_retrievers.py  test_security_path_traversal.py  test_service.py  test_sessions.py  test_subprocess_invocation.py  test_workspace_isolation.py
tests/fixtures/documents/: sample.md  simple.txt
tests/services/: test_link_extractor.py
(+17 files in other folders)
