[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-mind-service"
version = "0.1.0"
description = "FastAPI service for research-mind"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "psycopg[binary]==3.1.12",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "ruff==0.1.11",
    "black==23.12.0",
    "mypy==1.7.1",
]

[tool.setuptools.packages]
find = { where = ["."], include = ["app*"] }
