[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-mind-service"
version = "0.1.0"
description = "FastAPI service for research-mind"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0,<0.28",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "trafilatura>=1.12.0",
    "newspaper4k>=0.9.0",
    "playwright>=1.45.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "weasyprint>=62.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0,<0.28",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may require CLI tools)",
]

[tool.setuptools.packages]
find = { where = ["."], include = ["app*"] }

[tool.uvicorn]
reload-excludes = [".venv/*", "__pycache__/*", "*.pyc"]